--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
+    "react-transition-group": "1",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
-    "redux-promise-middleware": "^4.3.0",
+    "redux-pender": "^1.0.24",
     "styled-components": "^2.1.2"
   },
   "scripts": {
