--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "alertifyjs": "^1.11.0",
     "firebase": "^4.2.0",
     "immutable": "^3.8.1",
+    "material-ui": "^0.18.7",
     "open-color": "^1.5.1",
     "react": "^15.6.1",
     "react-click-outside": "^2.3.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
+    "react-mdl": "^1.10.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
