--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-click-outside": "^2.3.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
+    "react-mdl": "^1.10.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
