--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-pender": "^1.0.24",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.1.2"
   },
   "scripts": {
